--- a/angular.json
+++ b/angular.json
@@ -20,12 +20,18 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
+              "assets": [
+                {
+                  "glob": "**/*",
+                  "input": "./src/app/assets",
+                  "output": "/assets"
+                },
+                {
+                  "glob": "favicon.ico",
+                  "input": "src/",
+                  "output": "/"
+                }
+              ],
             "styles": [
               "src/styles.css"
             ],
@@ -97,5 +103,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "dc32f531-661c-4a21-980e-7b86cce241ae"
   }
 }
